--- a/GeoQuiz/src/main/res/layout/activity_quiz.xml
+++ b/GeoQuiz/src/main/res/layout/activity_quiz.xml
@@ -20,13 +20,13 @@
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android_text="@string/true_button" />
+            android:text="@string/true_button" />
 
         <Button
             android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android_text="@string/false_button" />
+            android:text="@string/false_button" />
 
     </LinearLayout>
 
@@ -34,6 +34,8 @@
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/next_button" />
+        android:text="@string/next_button"
+        android:drawableRight="@drawable/arrow_right"
+        android:drawablePadding="4dp" />
 
 </LinearLayout>
