--- a/GeoQuiz/src/main/res/layout/activity_quiz.xml
+++ b/GeoQuiz/src/main/res/layout/activity_quiz.xml
@@ -44,6 +44,12 @@
             android:drawablePadding="4dp" />
 
         <Button
+            android:id="@+id/cheat_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cheat_button" />
+
+        <Button
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,4 +58,11 @@
             android:drawablePadding="4dp" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/build_version_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="24dp" />
+
 </LinearLayout>
