--- a/CriminalIntent/src/main/res/layout/fragment_crime.xml
+++ b/CriminalIntent/src/main/res/layout/fragment_crime.xml
@@ -2,7 +2,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
+
+    <EditText
+        android:id="@+id/crime_title_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/crime_title_hint" />
 
 </LinearLayout>
