--- a/CriminalIntent/src/main/res/layout/dialog_time.xml
+++ b/CriminalIntent/src/main/res/layout/dialog_time.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<DatePicker
+<TimePicker
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/dialog_date_datePicker"
+    android:id="@+id/dialog_time_TimePicker"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:calendarViewShown="false">
 
-</DatePicker>
+</TimePicker>
