Work on HelloWorld

--- a/HelloMoon/hello_moon/src/main/res/layout/activity_hello_moon.xml
+++ b/HelloMoon/hello_moon/src/main/res/layout/activity_hello_moon.xml
@@ -1,8 +1,6 @@
-<FrameLayout
+<fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/helloMoonFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bryanricker.hello_moon.HelloMoonActivity"
-    tools:ignore="MergeRootFrame" />
+    android:name="com.bryanricker.hello_moon.HelloMoonFragment" />
