--- a/HelloMoon/hello_moon/src/main/res/layout/fragment_hello_moon.xml
+++ b/HelloMoon/hello_moon/src/main/res/layout/fragment_hello_moon.xml
@@ -1,17 +1,39 @@
-<RelativeLayout
+<TableLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.bryanricker.hello_moon.HelloMoonActivity$PlaceholderFragment">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:src="@drawable/armstrong_on_moon"
+        android:contentDescription="@string/hellomoon_description"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerInside"
+        android:layout_weight="1" />
 
-</RelativeLayout>
+    <TableRow
+        android:gravity="center|bottom"
+        android:layout_weight="0">
+
+        <Button
+            android:id="@+id/hellomoon_play_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hellomoon_play" />
+
+        <Button
+            android:id="@+id/hellomoon_pause_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="@string/hellomoon_pause" />
+
+        <Button
+            android:id="@+id/hellomoon_stop_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hellomoon_stop" />
+
+    </TableRow>
+
+</TableLayout>
